pkg/lang/syntax/testdata/ub/invalid/selector-body/factory-node-dotted-keys.ub
factory: {
  resources: {
    std.file.example: {}
  }
  data: {
    std.lookup.current: {}
  }
  actions: {
    std.run.now: {}
  }
}
